# virtaus

./: .gitignore  Makefile.am  README.md  common.am  configure.ac  libcream.pc.in  virtaus-core-1.0.pc.in  virtaus.doap
data/: Makefile.am  apps.virtaus.gschema.xml.in.in  virtaus.appdata.xml.in  virtaus.desktop.in.in
data/icons/: Makefile.am
libcream/: Makefile.am  cream-base-object.vala  cream-context.vala  cream-data-source.vala  cream-enums.vala  cream-exporter.vala  cream-extension-info.vala  cream-filter.vala  cream-model.vala  cream-plugin-manager.vala  cream-plugin.vala  cream-project.vala  cream-renderer.vala  cream-resource-handler.vala  cream-resource-manager.vala  cream-resource.vala  cream-settings.vala  cream-types.vala  cream.gresource.xml  design.md
libcream/models/image/: cream-image-model.vala  cream-image-renderer.vala
libcream/resources/: cream-image-resource-handler.vala  cream-image-resource.vala
libvirtaus/: Makefile.am  virtaus-core-1.0.deps  virtaus-core-data-source.vala  virtaus-core-enums.vala  virtaus-core-extension-info.vala  virtaus-core-filter.vala  virtaus-core-plugin-manager.vala  virtaus-core-plugin.vala  virtaus-core-types.vala
m4/: virtaus.m4
plugins/: Makefile.am
plugins/example/: Makefile.am  example-plugin.vala  example.plugin.in
plugins/local-source/: Makefile.am  local-source.gresource.xml  local-source.plugin.in  local-source.vala  operations.vala
plugins/local-source/sql/: schema.sql
plugins/task-manager/: Makefile.am  mystudies-task-manager-edit-panel.vala  mystudies-task-manager-list-row.vala  mystudies-task-manager-new-task-dialog.vala  mystudies-task-manager-plugin.vala  mystudies-task-manager-task-row.vala  mystudies-task-manager-widget.vala  task-manager.gresource.xml  task-manager.plugin.in
plugins/task-manager/resources/: edit_panel.ui  list_row.ui  new_task_dialog.ui  style.css  task_row.ui  widget.ui
po/: Makefile.in
src/: Makefile.am  main.vala  virtaus-window.vala  virtaus.gresource.xml
src/application/: virtaus-application.vala
src/dialogs/: virtaus-preferences-dialog.vala
src/resources/: #collection-view.ui#  category.ui  category.ui~  collection-creator.ui  collection-selector.ui  collection-view.ui  collection_buttons.ui~  collection_child.ui  collection_child.ui~  collections (cópia).ui  collections (cópia).ui~  collections.ui  collections.ui~  menu.ui  preferences.ui  preferences.ui~  project-creator.ui  project-selector.ui  project-view.ui  style.css  window.ui  window.ui~
src/views/: virtaus-category-view.vala  virtaus-collection-creator-view.vala  virtaus-collection-selector-view.vala  virtaus-collection-view.vala  virtaus-project-creator-view.vala  virtaus-project-selector-view.vala  virtaus-project-view.vala  virtaus-view.vala
src/widgets/: virtaus-base-renderer.vala  virtaus-collection-item.vala  virtaus-selectable-icon-view.vala
